# hackrf

firmware/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  flash.sh  flash_ocd.txt  hackrf-common.cmake  hackrf_firmware_all.cbp  openocd-2.cfg  openocd.cfg
firmware/blinky/: CMakeCache.txt  Makefile  blinky.c  blinky.cbp  cmake_install.cmake
firmware/common/: hackrf_core.c  hackrf_core.h
firmware/hackrf_usb/: Makefile  cmake_install.cmake  hackrf_usb.cbp
firmware/ice40/common/: counter.v  shift.v
firmware/ice40/hx1k/: Makefile  baudgen.vh  bgen_rx.v  io.pcf  top.v  uart_rx.v
firmware/ice40/hx1k-capSense/: baudgen.vh  io.pcf  top.asc  top.blif  top.v  uart.v
firmware/ice40/hx1k-sram/: io.pcf  top.asc  top.blif  top.v
firmware/ice40/lp1k/: Makefile  bgen.v  io.pcf  mcpu.v  top.asc  top.blif  top.v
firmware/ice40/osc1/: top.v
firmware/ice40/sgpio/: io.pcf  top.v
firmware/ice40/spi/: io.pcf  top.asc  top.blif
firmware/ice40/spiecho/: io.pcf  top.v
firmware/ice40/spiflash/: io.pcf  top.v
firmware/ice40/spiout/: top.v
firmware/ice40/spipass/: Makefile  io.pcf  top.v
firmware/ice40/sram/: top.v
firmware/liblpc/: CMakeLists.txt  Makefile  adc.c  adc.h  i2c.c  i2c_18xx_43xx.c  liblpc.cbp  sgpio.c  sgpio.h  ssp.c  ssp_general.h  timers.c  uart.c
firmware/om13088ul_usb/: CMakeLists.txt  Makefile  cmake_install.cmake  hackrf_usb.c  hackrf_usb.cbp  i2c.stack  i2c_hang.stack  m0_bin.s  main_main.c  main_main.h  om13088ul_usb.cbp  spi_stack  usb.stack  usb_api_board_info.c  usb_api_board_info.h  usb_api_spiflash.c  usb_api_transceiver.c  usb_api_wieker.c  usb_api_wieker.h
hardware/LNA915/: LNA915-cache.lib  LNA915-rescue.lib  LNA915.kicad_pcb  LNA915.pro  LNA915.sch  sym-lib-table
hardware/SRAMboard/SRAMboard/: SRAMboard-cache.lib  SRAMboard.kicad_pcb  SRAMboard.kicad_pcb-bak  SRAMboard.net  SRAMboard.pro  SRAMboard.sch  SRAMboard.sch-bak  fp-info-cache
hardware/SRAMboardBGA/SRAMboardBGA/: SRAMboardBGA-cache.lib  SRAMboardBGA.kicad_pcb  SRAMboardBGA.kicad_pcb-bak  SRAMboardBGA.net  SRAMboardBGA.pro  SRAMboardBGA.sch
hardware/aboard/board/: _autosave-board.kicad_pcb  board-cache.lib  board.kicad_pcb  board.kicad_pcb-bak  board.net  board.sch
hardware/bubblegum/: bubblegum-cache.lib  bubblegum-rescue.lib  bubblegum.pro  bubblegum.sch  sym-lib-table
hardware/eepromboard/eepromboard/: eepromboard-cache.lib  eepromboard.kicad_pcb-bak  eepromboard.net  eepromboard.sch
hardware/hackrf-one/: hackrf-one.xml
hardware/hackrf-one/rescue-backup/: hackrf-one-2018-09-19-18-44-50.pro  hackrf-one-2018-09-19-22-09-27.pro  hackrf-one-2018-10-16-22-10-05.pro  hackrf-one-rescue-2018-09-19-18-44-50.lib  hackrf-one-rescue-2018-09-19-22-09-27.lib  hackrf-one-rescue-2018-10-16-22-10-05.lib  sym-lib-table-2018-09-19-22-09-27  sym-lib-table-2018-10-16-22-10-05
hardware/ice40board/ice40board/: ice40board-cache.lib  ice40board.kicad_pcb-bak  ice40board.net  ice40board.sch
hardware/jellybean/: jellybean-rescue.lib  jellybean.pro
hardware/jellybean/rescue-backup/: sym-lib-table-2019-05-18-17-26-47
hardware/lemondrop/: lemondrop-cache.lib  lemondrop-rescue.lib  lemondrop.pro  lemondrop.sch
hardware/lemondrop/rescue-backup/: sym-lib-table-2019-05-18-17-27-16
hardware/lib/: FCI_10103594_MILL.kicad_mod  kilib.dcm  kilib.lib  kilib2.lib
hardware/lib/kifootp.pretty/: BGA-48_6.0x8.0mm_Layout6x8_P0.75mm.kicad_mod  BGA-48_8.0x9.0mm_Layout6x8_P0.75mm.kicad_mod  CAPBUTTON.kicad_mod  M10578-A3.kicad_mod  ice40-CM36-WLCSP-36_2.82x2.67mm_Layout6x6_P0.4mm.kicad_mod
hardware/lib/lpc51lib.pretty/: C_0805_2012Metric.kicad_mod  C_1206_3216Metric.kicad_mod  FCI_10103594_MILL.kicad_mod  LQFP-64_10x10mm_P0.5mm.kicad_mod  L_1210_3225Metric.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod  PinHeader_1x05_P2.54mm_Vertical.kicad_mod  R_0805_2012Metric.kicad_mod  R_1206_3216Metric.kicad_mod  Socket_Strip_Arduino_1x06.kicad_mod  Socket_Strip_Arduino_1x08.kicad_mod  Socket_Strip_Arduino_1x10.kicad_mod  TL3305-C.kicad_mod  TSOT-23-5.kicad_mod
hardware/licorice/: licorice-cache.lib  licorice-rescue.lib  licorice.pro  licorice.sch  sym-lib-table
hardware/lollipop/: lollipop-cache.lib  lollipop-rescue.lib  lollipop.pro  lollipop.sch  sym-lib-table
hardware/lpc51u68board/lpc51u68board/: default.kicad_pcb-bak  lpc51u68board-cache.lib  lpc51u68board.kicad_pcb  lpc51u68board.kicad_pcb-bak  lpc51u68board.net  lpc51u68board.pro  lpc51u68board.sch
hardware/marzipan/: marzipan-rescue.lib
hardware/neapolitan/: baseband.sch  frontend.sch  mcu.sch  neapolitan-cache.lib  neapolitan-rescue.lib  neapolitan.pro  neapolitan.sch  sym-lib-table
host/: spi_flash.sh  spidump  spidump-erased
(+256 files in other folders)
